workshop03/01.config.yaml
---
apiVersion: v1
kind: Namespace

metadata:
  name: nwns
  labels:
    version: v1
