workshop03/03.database.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata: 
  name: nwdb-deploy
  namespace: nwns
  labels:
    name: nwdb
    version: v1
spec: 
  replicas: 1
  selector: 
    matchLabels:
      name: nwdb
      version: v1
  template: 
    metadata: 
      name: nwdb-pod
      labels: 
        name: nwdb
        version: v1
    spec: 
      volumes: 
      - name: mysqldb-volume
        persistentVolumeClaim: 
          claimName: mysqldb-pvc
      containers: 
      - name: nwdb-container
        image: stackupiss/northwind-db:v1
        imagePullPolicy: IfNotPresent
        resources:
          requests: 
            cpu: "20m"
            memory: "55M"
        ports: 
        - name: nwdb-port
          containerPort: 3306
        volumeMounts: 
          - mountPath: /var/lib/mysql
            name: mysqldb-volume

---
apiVersion: v1
kind: Service

metadata: 
  name: nwdb-svc
  namespace: nwns
  labels: 
    name: nwdb-svc
    version: v1

spec:
  type: ClusterIP
  selector:
    name: nwdb
    version: v1
  ports: 
  - name: http
    port: 3306
    targetPort: nwdb-port
