workshop03/04.server.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata: 
  name: nwserverv1-deploy
  namespace: nwns
  labels:
    name: nwserver
    version: v1

spec: 
  replicas: 3
  selector: 
    matchLabels:
      name: nwserver
      version: v1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template: 
    metadata: 
      name: nwserver-pod
      labels: 
        name: nwserver
        version: v1

    spec: 
      containers: 
      - name: nwserver-container
        image: stackupiss/northwind-app:v1
        imagePullPolicy: IfNotPresent
        livenessProbe: 
          httpGet:
            path: /health
            port: nwserverv1-port
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        ports: 
        - name: nwserverv1-port
          containerPort: 3000

---
apiVersion: v1
kind: Service

metadata: 
  name: nwserverv1-svc
  namespace: nwns
  labels: 
    name: nwserver-svc
    version: v1

spec:
  type: ClusterIP
  selector:
    name: nwserver
    version: v1
  ports: 
  - name: http
    port: 80
    targetPort: nwserverv1-port


---
apiVersion: apps/v1
kind: Deployment

metadata: 
  name: nwserverv2-deploy
  namespace: nwns
  labels:
    name: nwserver
    version: v2

spec: 
  replicas: 3
  selector: 
    matchLabels:
      name: nwserver
      version: v2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template: 
    metadata: 
      name: nwserver-pod
      labels: 
        name: nwserver
        version: v2

    spec: 
      containers: 
      - name: nwserver-container
        image: stackupiss/northwind-app:v2
        imagePullPolicy: IfNotPresent
        livenessProbe: 
          httpGet:
            path: /health
            port: nwserverv2-port
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        ports: 
        - name: nwserverv2-port
          containerPort: 3000

---
apiVersion: v1
kind: Service

metadata: 
  name: nwserverv2-svc
  namespace: nwns
  labels: 
    name: nwserver-svc
    version: v2

spec:
  type: ClusterIP
  selector:
    name: nwserver
    version: v2
  ports: 
  - name: http
    port: 80
    targetPort: nwserverv2-port
